# px4-ros2-drone-vision

./: README.md  package.xml  setup.cfg  setup.py
config/: camera_params.yaml  color_detector_params.yaml  image_processor_params.yaml  line_mission.yaml  mission_params.yaml  offboard_params.yaml  square_mission.yaml  triangle_mission.yaml  yolo_detector_params.yaml
drone_vision_py/: color_detector.py  image_processor.py  image_view_node.py  mission_planner.py  offboard_control.py  yolo_detector.py
launch/: camera_view.launch.py  color_detector.launch.py  image_processor.launch.py  mission.launch.py  yolo_detector.launch.py
