<?xml version="1.0"?>
<package format="3">
  <name>drone_vision_py</name>
  <version>0.0.1</version>
  <description>PX4 ROS2 drone vision project with offboard control, mission planning, and camera integration</description>
  <maintainer email="sjafarik@mtu.edu">Saeed Jafari Kang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>